update file reading for ALP