@@ -6,7 +6,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 public class ALPTest {
@@ -15,7 +15,7 @@ public class ALPTest {
     @TestFactory
     public Stream<DynamicTest> testALP() {
         var dataSupplier =
-                new ALPTestDataSupplier(Paths.get("src", "test", "resources", "ALP").toString());
+                new ALPTestDataSupplier(Path.of("src", "test", "resources", "ALP"));
         var bench = new ProblemTestBench<>(dataSupplier);
         bench.testRelaxation = true;
         bench.testFLB = true;
